<resources>
    <string name="app_name">ALC 4 Phase 1 Challenge</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="my_name">Emmanuel Oladayo</string>
    <string name="profile_image_desc">This Drawable contains my Image</string>
    <string name="track">Track: </string>
    <string name="track_field">Android</string>
    <string name="country">Country:</string>
    <string name="country_field">Nigeria</string>
    <string name="email">Email:</string>
    <string name="email_field">oladayoemmanuel17@gmail.com</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone_number_field">+2348109372879</string>
    <string name="slack_username">Slack Username:</string>
    <string name="slack_username_field">\@Emmanuel</string>
    <string name="edit">EDIT</string>
    <string name="save">SAVE</string>
</resources>
